# Laval-Virtual-2014

./: .gitignore  README.md  Trucs utiles Github.txt  UnityGit.txt  diff.txt
Affiche/: AfficheCrap.pptx
AirInstruments/: AirInstruments.userprefs  Assembly-Boo-Editor-vs.booproj  Assembly-Boo-Editor.booproj
Documentations/: Architecture_logicielle.docx  Architecture_logicielle.odt  CasUtilisation.vsdx  DiagrammesArchitecture.vsdx  Horaire_d_equipe.docx  Plan_de_developpement_logiciel.docx  Plan_de_tests_logiciels.docx  Plan_de_tests_logiciels.odt  Resultats_de_tests_logiciels.docx  Resultats_de_tests_logiciels.odt  SRS.docx  SRS.odt  Specifications Preliminaires.docx  Tracabilite des exigences.ods  Traçabilité des exigences.xlsx  lifecycle.vsdx  reponsestp1.docx  ~$an_de_developpement_logiciel.docx
Kinect for Windows v2 SDK (Tech Preview Nov-18)/: K4W-v2.0-ReleaseNotes_DevPreviewParticipants.mht
Modeles_3ds/: baguette.max  bras_test_bones.max  main_droite.max
Prototype/kinectPower/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.txt  base.vcxproj  base.vcxproj.filters  cmake_install.cmake  kinect_power.sln  kinect_power.vcxproj  kinect_power.vcxproj.filters  kinect_wrapper.vcxproj  kinect_wrapper.vcxproj.filters
Prototype/kinectPower/algos/: contour_walk.cc  contour_walk.h  disjoint_set.h  disjoint_set_unittests.cc  kalman_filter.cc  kalman_filter.h  maths.cc  maths.h  maths_unittests.cc  sliding_window.cc  sliding_window.h  sliding_window_unittests.cc  stable_matching.cc  stable_matching.h
Prototype/kinectPower/base/: base.h  float_util.h  logging.cc  logging.h  observer_list.h  scoped_handle.h  scoped_ptr.h  string_utils.cc  string_utils.h  timer.cc  timer.h
Prototype/kinectPower/bitmap_graph/: bitmap_graph.cc  bitmap_graph.h  bitmap_graph_builder.cc  bitmap_graph_builder.h  bitmap_graph_builder_unittest.cc  bitmap_graph_unittest.cc  bitmap_run.cc  bitmap_run.h  bitmap_run_unittest.cc
Prototype/kinectPower/creative/: creative_wrapper.cc  creative_wrapper.h  hand_info.h  joint_info.h
Prototype/kinectPower/finger_finder/: average_depth.cc  average_depth.h  bitmap_graph.cc  bitmap_graph.h  bitmap_graph_to_contours_list.cc  bitmap_graph_to_contours_list.h  canny_contour.cc  canny_contour.h  contour_angle.cc  contour_angle.h  contour_curve.cc  contour_curve.h  contour_curve_filter.cc  contour_curve_filter.h  depth_translator.cc  depth_translator.h  find_fingers_in_color.cc  find_fingers_in_color.h  find_fingers_in_contour.cc  find_fingers_in_contour.h  finger_finder.cc  finger_finder.h  finger_info.h  hand_parameters.cc  hand_parameters.h  match_contours_to_previous_hands.cc  match_contours_to_previous_hands.h  segmenter.cc  segmenter.h
Prototype/kinectPower/finger_finder_thinning/: canny_contour.cc  canny_contour.h  finger_finder.cc  finger_finder.h  segmenter.cc  segmenter.h
Prototype/kinectPower/hand_extractor/: depth_difference_finder.cc  depth_difference_finder.h  finger_finder.cc  finger_finder.h  finger_finder_convex.cc  finger_finder_convex.h  finger_finder_curve.cc  finger_finder_curve.h  finger_finder_mountain.cc  finger_finder_mountain.h  hand_2d_parameters.cc  hand_2d_parameters.h  hand_extractor.cc  hand_extractor.h  segmenter.cc  segmenter.h
Prototype/kinectPower/hand_particle_filter/: hand_depth_renderer.cc  hand_depth_renderer.h  hand_description.cc  hand_description.h  hand_hypothesis.cc  hand_hypothesis.h  hand_skeleton.cc  hand_skeleton.h  hand_tracker.cc  hand_tracker.h
Prototype/kinectPower/hands_tracker/: hands_tracker.cc  hands_tracker.h
Prototype/kinectPower/hskl/include/: hsklu.h
Prototype/kinectPower/image/: contour_center.cc  contour_center.h  image_constants.cc  image_constants.h  image_utility.cc  image_utility.h
Prototype/kinectPower/intel_hand_tracker/: hskl.h  hsklu.cc  hsklu.h  intel_hand_tracker.cc  intel_hand_tracker.h
Prototype/kinectPower/kinect_face_tracker/: face_tracker.cc  face_tracker.h
Prototype/kinectPower/kinect_gesture_recognition/: gesture.cc  gesture.h  gesture_controller.cc  gesture_controller.h  gesture_piano.cc  gesture_piano.h
Prototype/kinectPower/kinect_interaction/: interaction_client_base.h  interaction_client_menu.cc  interaction_client_menu.h  interaction_frame.cc  interaction_frame.h
Prototype/kinectPower/kinect_lib/: lib.cc  lib.h
Prototype/kinectPower/kinect_power/: lib.cc  lib.h  main.cpp
Prototype/kinectPower/kinect_replay/: kinect_player.cc  kinect_player.h  kinect_recorder.cc  kinect_recorder.h
Prototype/kinectPower/kinect_wrapper/: constants.cc  constants.h  kinect_buffer.cc  kinect_buffer.h  kinect_coordinate_mapper.cc  kinect_coordinate_mapper.h  kinect_depth_stream.cc  kinect_depth_stream.h  kinect_include.h  kinect_observer.h  kinect_sensor.cc  kinect_sensor.h  kinect_sensor_data.cc  kinect_sensor_data.h  kinect_sensor_state.cc  kinect_sensor_state.h  kinect_skeleton.cc  kinect_skeleton.h  kinect_skeleton_buffer.cc  kinect_skeleton_buffer.h  kinect_skeleton_frame.cc  kinect_skeleton_frame.h  kinect_stream.cc  kinect_stream.h  kinect_switch.h  kinect_wrapper.cc  kinect_wrapper.cpp  kinect_wrapper.h  utility.cc  utility.h
Prototype/kinectPower/maths/: curve.cc  curve.h  maths.cc  maths.h  maths_unittests.cc  quaternion.cc  quaternion.h  smooth.cc  smooth.h  smooth_unittests.cc
Prototype/kinectPower/piano/: piano.cc  piano.h
Prototype/kinectPower/sample/: App.xaml  App.xaml.cs  KinectPowerInterop.cs  MainWindow.xaml  MainWindow.xaml.cs  Matrix4x4.cs  Skeleton.cs  sample.csproj
Prototype/kinectPower/sample/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Prototype/kinectPower/sample2010/sample/: KinectPowerInterop.cs  MainWindow.xaml  MainWindow.xaml.cs  Quaternion.cs  Vector3.cs  sample.csproj
Prototype/kinectPower/sample2010/sample/Properties/: AssemblyInfo.cs
Prototype/kinectPower/test_cpp/: main.cc
Prototype/kinectPower/test_opencv/: main.cc
Prototype/kinectPower/voronoi/: debug.h  timer.h
RemiseFinSession/: Architecture_logicielle.docx  Guide_utilisateur.docx  Justification_changements.docx  (+5 more)
(+662 files in other folders)
